# BankingClassification

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  TECHNICAL.md  agents.md  conftest.py  pyproject.toml
apps/: __init__.py
apps/backend/: __init__.py  main.py  pyproject.toml
apps/backend/app/: main.py  providers.py  schemas.py  service.py  settings.py
apps/backend/tests/: test_api.py  test_litellm_integration.py
apps/frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/frontend/src/: App.css  App.e2e.test.tsx  App.test.tsx  App.tsx  index.css  types.ts
artifacts/: intent_labels.json  intent_model.pth  sentiment_labels.json  sentiment_model.pth
banking_classification/: __init__.py  artifacts.py  model.py  prediction.py  text.py  vector.py
conductor/: TECH_DECISIONS.md  index.md  plan.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: general.md  html-css.md  javascript.md  python.md
conductor/tracks/backend_api_20260429/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/delivery_docs_20260429/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/frontend_ui_20260429/: index.md  metadata.json  (+2 more)
reports/: training_results.json  training_results.md
tests/: test_core_utils.py  test_phase0_scaffold.py
training/: __init__.py  colab_run_all.py  colab_train_with_tpu.ipynb  pyproject.toml  train.py
training/banking_classification_training/: __init__.py  data.py  pipeline.py  trainer.py
training/tests/: test_training_helpers.py
(+17 files in other folders)
